--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<div class="container">
+<div class="container dash">
     <div style="vertical-align: top;">
 
         <div class="spaceDivs dbSpans">
@@ -33,6 +33,7 @@
                 @Html.ActionLink("Edit", "Edit", "Entity", new { @class = "addpadding button" })
         </div>
         <div id="map" class="dashMap"></div>
+    </div>
     </div>
     @*<span class="spaceDivs dbSpans">
             <h2>My Investment Tags</h2>
@@ -85,7 +86,7 @@
 
 
 
-
+<div class="container dash">
     <div class="spaceDivs">
         <h2>Investments Sent</h2>
         <div class="addpadding">
@@ -153,6 +154,9 @@
 
         </div>
     </div>
+    </div>
+
+<div class="container dash">
 
     <div class="spaceDivs">
         <h2>My Projects</h2>
