--- a/ImpactMap/Views/Entities/Create.cshtml
+++ b/ImpactMap/Views/Entities/Create.cshtml
@@ -4,358 +4,93 @@
     ViewBag.Title = "Create";
 }
 
-@model ImpactMap.Models.Entity
-
-@{
-    ViewBag.Title = "Index";
-}
-
 <div class="container">
-    <div style="vertical-align: top;">
+    <h2>Create</h2>
 
-        <div class="spaceDivs dbSpans">
-            <dt class="dl-horizontal">
-
-                <dd>
-                    <span class="orgName">@Html.DisplayFor(model => model.name)</span>
-                </dd>
-
-                <dd>
-                    @Html.DisplayFor(model => model.address1)
-                </dd>
-
-                <dd>
-                    @Html.DisplayFor(model => model.address2)
-                </dd>
-
-                <dd>
-                    @Html.DisplayFor(model => model.city), @Html.DisplayFor(model => model.state)   @Html.DisplayFor(model => model.zip)
-                </dd>
-                <br />
-                <dd>
-                    @Html.DisplayFor(model => model.description)
-                </dd>
-
-                @Html.ActionLink("Edit", "Edit", "Entity", new { @class = "addpadding button" })
-        </div>
-        <div id="map" class="dashMap"></div>
-    </div>
-    @*<span class="spaceDivs dbSpans">
-            <h2>My Investment Tags</h2>
-            <div>
-                <table class="table">
-                    @foreach (var investment in Model.investmentsOut)
-                    {
-                        foreach (var category in investment.categories)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => category.name)
-                                </td>
-                                <td>
-
-                                </td>
-                            </tr>
-
-                        }
-                    }
-                </table>
-            </div>
-
-            <div class="addpadding">
-
-                @Html.ActionLink("Create New Tag", "Create", "Categories", "Categories", new { @class = "button" })
-            </div>
-        </span>*@
-
-    @*<span class="spaceDivs dbSpans">
-        @if ( user.ID has new reports/ report requests)
-                {
-                    <span style="display:block; text-align:right;">
-                        <span class="fa fa-exclamation"></span>
-                        <span class="fa fa-file-o"></span>
-                    </span>
-                }
-            else
-                {
-                    <span style="display:block; text-align:right;">
-                        <span class="fa fa-file-o"></span>
-                     </span>
-                }
-
-        <span style="display:block; text-align:right;">
-            <span class="fa fa-exclamation"></span>
-            <span class="fa fa-file-o"></span>
-        </span>*@
-    @*</span>*@
-
-
-
-
-    <div class="spaceDivs">
-        <h2>Investments Sent</h2>
-        <div class="addpadding">
-
-            @Html.ActionLink("Create New Investment", "Create", "Investments", "Investments", new { @class = "button" })
-
-            @Html.ActionLink("View All Investments", "Index", "Investments", "Investments", new { @class = "button" })
-
-            @Html.ActionLink("View Investment Tags", "Index", "Categories", "Categories", new { @class = "button" })
-
-            @if (Model.investmentsOut.Count != 0)
-            {
-                <table class="table">
-                    <tr>
-                        <th>
-                            Investment Date
-                        </th>
-                        <th>
-                            Value
-                        </th>
-                        <th>
-                            Recipient
-                        </th>
-                        <th>
-                            Reports
-                        </th>
-                    </tr>
-
-                    @*Displays each investment in the table*@
-                    @foreach (var item in Model.investmentsOut.Take(5))
-                {
-
-                        <tr>
-                            <td>
-                                @item.date.ToShortDateString()
-                            </td>
-                            <td>
-                                <p>$@Html.DisplayFor(modelItem => item.amount)</p>
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.entityTo.name)
-                            </td>
-                            <td>
-                                @if (item.projectTo.report != null)
-                                {
-                                    string reportID = Convert.ToString(item.projectTo.report.ID);
-                                    @Html.ActionLink("Report", reportID, "Details", "Report")
-                                }
-                                else
-                                {
-                                    <span>No report available.</span>
-                                }
-                            </td>
-                        </tr>
-
-                    }
-
-
-                </table>
-            }
-            else
-            {
-                <p>You Currently Have No Investments</p>
-            }
-
-        </div>
-    </div>
-
-    <div class="spaceDivs">
-        <h2>My Projects</h2>
-        <div class="addpadding">
-            @Html.ActionLink("Create New Project", "Create", "Projects", "Projects", new { @class = "button" })
-
-            @Html.ActionLink("View All Projects", "Index", "Projects", "Projects", new { @class = "button" })
-
-            @if (Model.projects.Count != 0)
-            {
-                <table class="table">
-                    <tr>
-                        <th>
-                            Project Name
-                        </th>
-                        <th>
-
-                        </th>
-                    </tr>
-                    @if (Model.investmentsOut != null)
-                {
-                    foreach (var item in Model.projects.Take(5))
-                    {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.name)
-                                </td>
-                                <td>
-
-                                    @foreach (var thing in item.investmentsIn)
-                                    {
-                                        <p>$@Html.DisplayFor(modelItem => thing.amount)</p><br />
-                                    }
-                                </td>
-                                <td>
-                                    @foreach (var thing in item.investmentsIn)
-                                    {
-                                        @thing.date.ToShortDateString()<br />
-                                    }
-                                </td>
-                                <td>
-                                    @foreach (var thing in item.investmentsIn)
-                                    {
-                                        @Html.DisplayFor(modelItem => thing.entityFrom.name)<br />
-                                    }
-                                </td>
-                                <td>
-                                    @if (item.report != null)
-                                    {
-                                        string reportID = Convert.ToString(item.report.ID);
-                                    }
-
-                                </td>
-                            </tr>
-                        }
-                    }
-                </table>
-            }
-            else
-            {
-                <p>You currently have no projects.</p>
-            }
-        </div>
-    </div>
-</div>
-
-@section Scripts {
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4VlRpvKNloHrCwtMLKy_X2UQVhW_8L5Q&callback=initialize">
-    </script>
-    <script src="~/Scripts/googlemapsNEW.js"></script>
-
-    <script>
-
-    initialize();
-
-    @{
-        string userLat = Model.lat;
-        string userLng = Model.lng;
-    }
-
-
-    @{string currentEntityAddress = Model.address1 + "+" + Model.address2 + "+" + Model.city + "+" + Model.state + "+" + Model.zip;}
-
-        markerlocation(@Model.ID, "@currentEntityAddress", "@Model.name", "@Model.description");
-
-    @foreach (var item in Model.investmentsOut)
+    @using (Html.BeginForm())
     {
-        string address = item.entityTo.address1 + "+" + item.entityTo.address2 + "+" + item.entityTo.city + "+" + item.entityTo.state + "+" + item.entityTo.zip;
-        <text>
-        console.log("@item.entityTo.name");
+        @Html.AntiForgeryToken()
 
-        markerlocation(@item.entityTo.ID, "@address", "@item.entityTo.name", "@item.entityTo.description");
+        <div class="form-horizontal">
+            <h4>Organization</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-        var path = [{ lat: @userLat, lng: @userLng }, { lat: @item.entityTo.lat, lng: @item.entityTo.lng }];
+            <div class="form-group">
+                @Html.LabelFor(model => model.address1, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.address1, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.address1, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-        var line = new google.maps.Polyline({
-            path: path,
-            strokeColor: '#005E1C',
-            strokeOpacity: 1.0,
-            strokeWeight: 3,
-            map: map
-        });
+            <div class="form-group">
+                @Html.LabelFor(model => model.address2, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.address2, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.address2, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
+            <div class="form-group">
+                @Html.LabelFor(model => model.city, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.city, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.city, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-        </text>
+            <div class="form-group">
+                @Html.LabelFor(model => model.state, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.state, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.state, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.zip, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.zip, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.zip, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
+                </div>
+
+            </div>
+
+            @*<div class="form-group">
+                @Html.LabelFor(model => model.logoURL, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.logoURL, new { htmlAttributes = new { @type = "file", @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.logoURL, "", new { @class = "text-danger" })
+                </div>
+
+            </div>*@
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Create" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
     }
 
-    </script>
-}
-
-
-
-
-<h2>Create</h2>
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Organization</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-         <div class="form-group">
-            @Html.LabelFor(model => model.address1, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.address1, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.address1, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.address2, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.address2, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.address2, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.city, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.city, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.city, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.state, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.state, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.state, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.zip, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.zip, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.zip, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
-            </div>
-            
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.logoURL, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.logoURL, new { htmlAttributes = new { @type="file", @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.logoURL, "", new { @class = "text-danger" })
-            </div>
-
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
+    <div class="addpadding">
+        @Html.ActionLink("Back to List", "Index")
     </div>
-}
 
-<div class="addpadding">
-    @Html.ActionLink("Back to List", "Index")
 </div>
