--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -7,9 +7,10 @@
 <div class="container dash">
     <div style="vertical-align: top;">
 
+        <h2>@Model.name Dashboard</h2>
         <div class="spaceDivs dbSpans">
-            <dt class="dl-horizontal">
 
+            <dt class="dl-horizontal">
                 <dd>
                     <span class="orgName">@Html.DisplayFor(model => model.name)</span>
                 </dd>
@@ -30,7 +31,7 @@
                     @Html.DisplayFor(model => model.description)
                 </dd>
 
-                @Html.ActionLink("Edit", "Edit", "Entity", new { @class = "addpadding button" })
+                @Html.ActionLink("Edit Your Organization", "Edit", "Entity", new { @class = "addpadding button" })
         </div>
         <div id="map" class="dashMap"></div>
     </div>
@@ -88,7 +89,15 @@
 
 <div class="container dash">
     <div class="spaceDivs">
-        <h2>Investments Sent</h2>
+        @{ if (Model.investmentsOut.Count != 0)
+            {
+                <h2>Investments Sent</h2>
+            }
+            else
+            {
+                <h2>Investments Sent - Here you can create and view investments to other organizations.</h2>
+            }
+         }
         <div class="addpadding">
 
             @Html.ActionLink("Create New Investment", "Create", "Investments", "Investments", new { @class = "button" })
@@ -149,7 +158,7 @@
             }
             else
             {
-                <p>You Currently Have No Investments</p>
+                <dd>You Currently Have No Investments</dd>
             }
 
         </div>
@@ -159,7 +168,15 @@
 <div class="container dash">
 
     <div class="spaceDivs">
-        <h2>My Projects</h2>
+        @{ if (Model.projects.Count > 1)
+            {
+                <h2>Projects</h2>
+            }
+            else
+            {
+                <h2>Projects - Here you can create and view your organization's projects.</h2>
+            }
+        }
         <div class="addpadding">
             @Html.ActionLink("Create New Project", "Create", "Projects", "Projects", new { @class = "button" })
 
@@ -176,8 +193,7 @@
 
                         </th>
                     </tr>
-                    @if (Model.investmentsOut != null)
-                {
+                    @{
                     foreach (var item in Model.projects.Take(5))
                     {
                             <tr>
