--- a/ImpactMap/Views/Entities/Create.cshtml
+++ b/ImpactMap/Views/Entities/Create.cshtml
@@ -5,14 +5,14 @@
 }
 
 <div class="container">
-    <h2>Create</h2>
+    <h1>Welcome!</h1>
+    <h2>Use the form below to add your organization.</h2>
 
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>Organization</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
@@ -88,9 +88,5 @@
             </div>
         </div>
     }
-
-    <div class="addpadding">
-        @Html.ActionLink("Back to List", "Index")
-    </div>
 
 </div>
