There's actually such a thing as base categories and subcategories now and they populate in the right places and they add right and all that stuff :)

--- a/ImpactMap/Content/Site.css
+++ b/ImpactMap/Content/Site.css
@@ -358,6 +358,15 @@ span.removeMetric{
     padding:5px 0;
 }
 
+#baseCatList ul {
+    list-style: none;
+    padding-left: 0px;
+}
+
+#baseCatList ul li {
+    padding:5px 0;
+}
+
 @media (min-width: 768px) {
     .navbar-right{
         padding-top:10px;
