--- a/ImpactMap/Views/Categories/Create.cshtml
+++ b/ImpactMap/Views/Categories/Create.cshtml
@@ -16,6 +16,16 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
+            <dd>Base Tags</dd>
+            <div class="col-md-10">
+                <div id="baseCatList">
+                    <select id="baseID" name="baseID"></select>
+                </div>
+                @Html.ActionLink("Add New Base Tag", "CreateBase", "Categories")
+            </div>
+        </div>
+        
+        <div class="form-group">
             @Html.LabelFor(model => model.Category.name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Category.name, new { htmlAttributes = new { @class = "form-control" } })
@@ -55,6 +65,22 @@
 
             <script>
                 newMetrics = [];
+
+                function load_baseCategories() {
+                    $.ajax({
+                        url: '/public/categories',
+                        type: 'GET',
+                        success: function (data) {
+                            //$('#CatList').html('<ul>');
+                            data.map(function (category) {
+                                if (category.isBase == true) {
+                                    $('#baseID').append('<option id="cat' + category.ID + '" value=' + category.ID + '>' + category.name + '</option>')
+                                }
+                            });
+                            //$('#CatList').append('</ul>');
+                        }
+                    })
+                }
 
                 //This Works
                 function addMetrics() {
@@ -101,6 +127,7 @@
                     })
                 })
 
+                $(load_baseCategories);
 
             </script>
         }
