Added comments to investments/create controller and view, entities/create controller and view

--- a/ImpactMap/Views/Categories/CreateBase.cshtml
+++ b/ImpactMap/Views/Categories/CreateBase.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <h2>Create Base Tag</h2>
-    <h3>No base tags (descriptors) were found to apply to new investments.  Please create one to continue.</h3>
+    <h3>Base tags are broad categories that apply to a wide range of investments.  Please use this form only to create a broad category, such as "Economic Development".  If you are creating a tag that is more specific to your organization, please go back and create a user tag under the most relevant base tag in the system.</h3>
 
     @using (Html.BeginForm())
     {
