--- a/ImpactMap/Views/Entities/Create.cshtml
+++ b/ImpactMap/Views/Entities/Create.cshtml
@@ -4,6 +4,8 @@
     ViewBag.Title = "Create";
 }
 
+@*Create Entity Page*@
+
 <div class="container">
     <h1>Welcome!</h1>
     <h2>Use the form below to add your organization.</h2>
@@ -11,7 +13,7 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-
+        //Organization name input form
         <div class="form-horizontal">
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -22,7 +24,7 @@
                     @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            @*Address1 input form*@
             <div class="form-group">
                 @Html.LabelFor(model => model.address1, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -30,7 +32,7 @@
                     @Html.ValidationMessageFor(model => model.address1, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            @*Address2 input form*@
             <div class="form-group">
                 @Html.LabelFor(model => model.address2, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -38,7 +40,7 @@
                     @Html.ValidationMessageFor(model => model.address2, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            @*City input form*@
             <div class="form-group">
                 @Html.LabelFor(model => model.city, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -46,7 +48,7 @@
                     @Html.ValidationMessageFor(model => model.city, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            @*State input form*@
             <div class="form-group">
                 @Html.LabelFor(model => model.state, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -54,7 +56,7 @@
                     @Html.ValidationMessageFor(model => model.state, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            @*ZIP input form*@
             <div class="form-group">
                 @Html.LabelFor(model => model.zip, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -62,25 +64,25 @@
                     @Html.ValidationMessageFor(model => model.zip, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            @*Description input form*@
             <div class="form-group">
                 @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
                 </div>
-
             </div>
 
+            @*Entity logo input form*@
             @*<div class="form-group">
                 @Html.LabelFor(model => model.logoURL, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.logoURL, new { htmlAttributes = new { @type = "file", @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.logoURL, "", new { @class = "text-danger" })
                 </div>
-
             </div>*@
 
+            @*Submits the info from all the above fields*@
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Create" class="btn btn-default" />
@@ -88,5 +90,4 @@
             </div>
         </div>
     }
-
 </div>
