--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model ImpactMap.Controllers.InvestmentViewModel
 
-
 @{
     ViewBag.Title = "Create";
 }
 
-<div class="container">
+@*Investments create form*@
 
+<div class="container">
     <h2>Create Investment</h2>
 
     @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "createInvestmentForm" }))
@@ -17,6 +17,7 @@
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
+            @*Date field*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.date, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -24,7 +25,7 @@
                     @Html.ValidationMessageFor(model => model.Investment.date, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            @*Value field*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.amount, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -32,8 +33,7 @@
                     @Html.ValidationMessageFor(model => model.Investment.amount, "", new { @class = "text-danger" })
                 </div>
             </div>
-
-            <!---Needs to populate only projects from the signed in entity-->
+            @*ProjectFrom dropdown populates based on current entity, sent in via the Entities/Create GET action*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.projectFrom, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -47,7 +47,7 @@
                     @Html.ValidationMessageFor(model => model.Investment.projectFrom_ID, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            @*EntityTo dropdown -- when this dropdown changes it sends its value to the javascript below to update the projectTo dropdown*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.entityTo, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -57,29 +57,16 @@
                             <option value=@entity.ID>@entity.name</option>
                         }
                     </select>
-
                 </div>
             </div>
-
+            @*ProjectTo dropdown populates based on the EntityTo selected above*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.projectTo, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     <select name="projectTo_ID" id="ProjectToDropdown"></select>
                 </div>
             </div>
-
-            @*<div class="form-group">
-                <dd>Base Tags</dd>
-                <div class="col-md-10">
-                    <div id="baseCatList">
-                        <select id="baseCatSelect">
-
-                        </select>
-                    </div>
-                    @Html.ActionLink("Add New Base Tag", "CreateBase", "Categories")
-                </div>
-            </div>*@
-                
+            @*Categories list with checkboxes - populates using an ajax call (load_categories) below*@                
             <div class="form-group">
                 <dd>Investment Tags</dd>
                 <div class="col-md-10">
@@ -88,11 +75,13 @@
 
                         </ul>
                     </div>
+                    @*Hidden input field that javascript below adds stuff to, this is sent to the controller*@
                     <input name="categories" id="categories" type="hidden" />
                     @Html.ActionLink("Add New Tag", "Create", "Categories")
                 </div>
             </div>
 
+            @*In Kind checkbox -- when checked it displays the field below for volunteer hours*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.isInKind, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -102,7 +91,7 @@
                     </div>
                 </div>
             </div>
-
+            @*Volunteer hours field*@
             <div class="form-group hideFormField" id="VolunteerContainer">
                 @Html.LabelFor(model => model.Investment.volunteerHours, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -110,7 +99,7 @@
                     @Html.ValidationMessageFor(model => model.Investment.volunteerHours, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            @*Description input form*@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.description, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -128,11 +117,9 @@
         </div>
     }
 
-
     <div class="addpadding">
         @Html.ActionLink("Investments List", "Index") | @Html.ActionLink("Dashboard", "Index", "Dashboard")
     </div>
-
 </div>
 
 
@@ -140,8 +127,12 @@
     @Scripts.Render("~/bundles/jqueryval")
 
     <script>
-
+        //selectedCategories is an array which is put into the hidden categories field and then sent to the controller
         selectedCategories = [];
+
+        //this ajax call goes over to public/usercategories and snatches up the categories in the system
+        //it then puts the ones that are NOT base categories into the categories checkbox area
+        //when they are clicked, it triggers toggle_category
         function load_categories() {
             $.ajax({
                 url: '/public/usercategories',
@@ -159,32 +150,12 @@
             })
         }
 
-        //function load_baseCategories() {
-        //    $.ajax({
-        //        url: '/public/categories',
-        //        type: 'GET',
-        //        success: function (data) {
-        //            //$('#CatList').html('<ul>');
-        //            data.map(function (category) {
-        //                if (category.isBase == true) {
-        //                    $('#baseCatList select').append('<option id="cat' + category.ID + '" value=' + category.ID + '>' + category.name + '</option>')
-        //                }
-        //            });
-        //            //$('#CatList').append('</ul>');
-        //        }
-        //    })
-        //}
-
         function toggle_category(id) {
             // if it is not there
             // add the hidden input element
             // add the checkmark to the category
             if (!$('#catspan' + id).hasClass('fa fa-check-square-o')) {
                 selectedCategories.push(id);
-                //var found = $.inArray($('#baseCatSelect').val, selectedCategories) > -1;
-                //if (found == false) {
-
-                //}
                 $('#categories').val(selectedCategories.toString());
                 console.log($('#categories').val())
                 $('#catspan' + id).removeClass('fa fa-square-o');
@@ -219,11 +190,12 @@
             });
         }
 
+        //When the submit button is clicked, it 
         $('#submitButton').click(function () {
-            selectedCategories.push($('#baseCatSelect').val);
             $('#createInvestmentForm').submit();
         });
    
+        //This does an ajax call to populate the projectTo dropdown whenever the entityTo dropdown changes
         function updateProjectsOut() {
             $.ajax({
                 url: '/Entities/GetProjectsOut/' + $('#recipientSelect').val() + '/',
@@ -233,18 +205,16 @@
                     data.map(function (project) {
                         //html += '<li>' + replayEvent.DisplayName + '<span data-id=' + replayEvent.Id + ' class="DeleteButton btn btn-primary">Delete</span></li>'
                         html += '<option value=' + project.ID + '>' + project.name + '</option>'
-                        
                     });
                     $('#ProjectToDropdown').html(html);
                 }
             });
         };
-
         $('#recipientSelect').change(updateProjectsOut);
 
+        //These functions need to run on when the page loads, so they're collected into one function and then run on page load
         function initialize() {
             load_categories();
-            load_baseCategories();
             addVolunteerHours();
             updateProjectsOut();
         }
